# WebPhonon

./: CMakeLists.txt  DB.sql  Icons.qrc  LICENSE  README  README.md  WebPhonon-Master-text2.tiff  WebPhonon-git.kdev4  WebPhonon.1  WebPhonon.desktop  WebPhonon.pro  WebPhonon.pro.user.a61ba3f.18  WebPhonon.rc  WebPhonon.spec  WebPhonon.sql  WebPhononConfig.h.in  WebPhononIcon.tiff  WebPhonon_Documentation.html  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addactordialog.cpp  addactordialog.h  addactordialog.ui  addalbumcastdialog.cpp  addalbumcastdialog.h  addalbumcastdialog.ui  addalbumdialog.cpp  addalbumdialog.h  addalbumdialog.ui  addartistdialog.cpp  addartistdialog.h  addartistdialog.ui  addmoviecastdialog.cpp  addmoviecastdialog.h  addmoviecastdialog.ui  addmoviedialog.cpp  addmoviedialog.h  addmoviedialog.ui  addmusicalbumdialog.cpp  (+66 more)
.bzr/checkout/: dirstate
.kdev4/: WebPhonon-git.kdev4
debian/: changelog  control  copyright  files  webphonon.substvars
debian/webphonon/DEBIAN/: control  md5sums
docs/: README.md
icons/: CMakeLists.txt  PlayWithWebPhonon.desktop  WebPhonon.desktop
